--- a/mapmarkers/Makefile
+++ b/mapmarkers/Makefile
@@ -1,7 +1,8 @@
 POVRAY = povray
 CONVERT = convert
 
-BUILT_FILES = bluedot_100x100.png bluedotm_std.png bluedotm_hi.png
+BUILT_FILES = bluedot_100x100.png bluedotm_std.png bluedotm_hi.png \
+	pinkpin_full.png pinkpin_cropped.png pinkpin_hi.png pinkpin_std.png
 
 all: $(BUILT_FILES)
 
@@ -16,3 +17,15 @@ bluedotm_std.png: bluedot_100x100.png
 	
 bluedotm_hi.png: bluedot_100x100.png
 	$(CONVERT) $< -scale 30x30 $@
+	
+pinkpin_full.png: pin.pov
+	$(POVRAY) +I$< -O$@ +W400 +H400 +A +AM2 +UA
+	
+pinkpin_cropped.png: pinkpin_full.png
+	$(CONVERT) $< -crop 190x380+105+28 +repage $@
+	
+pinkpin_hi.png: pinkpin_cropped.png
+	$(CONVERT) $< -scale 30x60 $@
+
+pinkpin_std.png: pinkpin_cropped.png
+	$(CONVERT) $< -scale 15x30 $@
